# position_preserving_moodle_question_xml_edit

./: Cargo.toml  README.md
src/: lib.rs  stack.rs
tests/: 01_intro.rs  02_error_cases.rs  03_file_io.rs  04_stack.rs
tests/tests/: minimal-stack.xml
